# plugmem

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
claude-code-plugmem-plugin/: pyproject.toml  server.py
claude-code-plugmem-plugin/tests/: test_server.py
deploy/remote/: .env.example  compose.yaml
deploy/systemd/: plugmem-compose.service
docs/: remote-deployment.md
openclaw-plugmem-plugin/: ONBOARDING.md
openclaw-plugmem-plugin/src/: client.ts  index.ts  types.ts
plugmem/: coding_contract.py  config.py  graph_manager.py
plugmem/api/: app.py  demo.py  dependencies.py  schemas.py
plugmem/api/routes/: extract.py  graphs.py  health.py  inspector.py  memories.py  promote.py  retrieval.py
plugmem/cli/: config.py  daemon.py  main.py
plugmem/cli/commands/: coding.py  health.py  init.py  logs.py  restart.py  start.py  status.py  stop.py
plugmem/cli/wizard/: __init__.py  final_probe.py  main.py  probes.py  sections.py  ui.py
plugmem/clients/: embedding.py  llm.py
plugmem/core/: __init__.py  graph_node.py  memory.py  memory_graph.py  normalize.py  value_base.py  value_functions.py
plugmem/inference/: _shared.py  promotion.py  retrieving.py  structuring.py
plugmem/prompts/: registry.py
plugmem/storage/: __init__.py  chroma.py  sqlite_vec.py
tests/: conftest.py  test_api_extract.py  test_api_graphs.py  test_api_inspector.py  test_api_inspector_recall.py  test_api_memories.py  test_api_source_confidence.py  test_memory.py  test_memory_graph_load.py  test_memory_graph_retrieval.py  test_merge_semantic.py  test_phase_tagging.py  test_promote_stability.py  test_storage_chroma.py  test_storage_sqlite_vec.py
tests/cli/: test_coding.py  test_config.py  test_daemon.py  test_probes.py
