[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "plugmem"
version = "0.1.0"
description = "Pluggable memory system for LLM agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Murat Karacam" }]
keywords = ["llm", "memory", "agents", "chromadb", "rag"]
dependencies = [
    "chromadb>=0.5",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "openai>=1.0",
    "numpy>=1.24",
    "requests>=2.28",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    # CLI / setup wizard
    "typer>=0.12",
    "rich>=13.7",
    "tomli>=2.0; python_version<'3.11'",
    "tomli-w>=1.0",
]

[project.urls]
Homepage = "https://github.com/mrtkrcm/PlugMem"
Repository = "https://github.com/mrtkrcm/PlugMem"
Issues = "https://github.com/mrtkrcm/PlugMem/issues"

[project.scripts]
plugmem = "plugmem.cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.0",
]
sqlite-vec = [
    "sqlite-vec>=0.1",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
no_implicit_optional = false
disable_error_code = [
    "no-untyped-def", "no-any-return", "var-annotated",
    "attr-defined", "union-attr", "misc", "index",
]

[[tool.mypy.overrides]]
module = "plugmem.clients.*"
disable_error_code = ["assignment", "arg-type", "return-value"]

[[tool.mypy.overrides]]
module = "plugmem.storage.*"
disable_error_code = ["assignment", "arg-type", "return-value"]

[[tool.mypy.overrides]]
module = "plugmem.api.*"
disable_error_code = ["assignment", "arg-type", "return-value"]

[[tool.mypy.overrides]]
module = "plugmem.core.*"
disable_error_code = ["assignment", "arg-type", "return-value", "list-item"]

[[tool.mypy.overrides]]
module = "plugmem.inference.*"
disable_error_code = ["assignment", "arg-type"]

[[tool.mypy.overrides]]
module = "plugmem.cli.*"
disable_error_code = ["arg-type"]

[tool.setuptools.packages.find]
include = ["plugmem*"]

[tool.setuptools.package-data]
"plugmem" = ["api/static/**/*"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:legacy embedding function config:DeprecationWarning",
]
